# AionCore

./: .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  justfile
.github/workflows/: build-manual.yml  ci.yml  release.yml
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-app/: Cargo.toml
crates/aionui-auth/: Cargo.toml
crates/aionui-auth/src/: error.rs  jwt.rs  lib.rs  password.rs  validation.rs
crates/aionui-auth/tests/: jwt_tests.rs
crates/aionui-channel/: Cargo.toml
crates/aionui-common/: Cargo.toml
crates/aionui-conversation/: Cargo.toml
crates/aionui-conversation/src/: convert.rs  error.rs  lib.rs  routes.rs  routes_aux.rs  runtime_state.rs  service.rs  service_ops.rs  service_test.rs  session_context.rs  skill_resolver.rs  state.rs  stream_relay.rs  turn_continuation_policy.rs  turn_orchestrator.rs  turn_recovery_policy.rs
crates/aionui-conversation/tests/: acp_tool_call_persistence.rs  active_lease.rs  response_middleware_integration.rs  stream_relay_tips.rs  stream_relay_tool_call.rs
crates/aionui-cron/: Cargo.toml
crates/aionui-cron/src/: artifacts.rs  events.rs  executor.rs  lib.rs  routes.rs  scheduler.rs  service.rs  skill_suggest.rs  types.rs
crates/aionui-cron/tests/: service_integration.rs
crates/aionui-db/: Cargo.toml
crates/aionui-extension/: Cargo.toml
crates/aionui-extension/src/: lib.rs  skill_service.rs
crates/aionui-extension/tests/: assistant_dispatch_test.rs  startup_materialize.rs
crates/aionui-file/: Cargo.toml
crates/aionui-file/src/: service.rs
crates/aionui-file/tests/: file_read_write.rs  image_processing.rs
crates/aionui-mcp/: Cargo.toml
crates/aionui-office/: Cargo.toml
crates/aionui-office/src/: conversion.rs  error.rs  lib.rs  port.rs  routes.rs  star_office.rs  state.rs  watch_manager.rs
crates/aionui-office/tests/: star_office_integration.rs  watch_manager_integration.rs
crates/aionui-system/: Cargo.toml
crates/aionui-system/src/: client_pref.rs  diagnostics.rs  keep_awake.rs  provider.rs  routes.rs
crates/aionui-system/src/model_fetcher/: mod.rs
crates/aionui-system/tests/: feedback_diagnostics_routes.rs  model_fetch_routes.rs  protocol_detection_routes.rs  provider_routes.rs  settings_routes.rs  system_info_routes.rs
crates/aionui-team/: Cargo.toml
crates/aionui-team/docs/: frontend-guide.md
crates/aionui-team/src/: capability.rs  error.rs  event_loop.rs  events.rs  lib.rs  message_projection.rs  ports.rs  provisioning.rs  routes.rs  runtime_tools.rs  scheduler.rs  service.rs  session.rs  team_run.rs  test_utils.rs  tool_executor.rs
crates/aionui-team/src/mcp/: bridge.rs  mod.rs  protocol.rs  server.rs  tools.rs
crates/aionui-team/src/prompts/: mod.rs
crates/aionui-team/src/scheduler/: tests.rs
crates/aionui-team/src/service/: describe_support.rs  response_builder.rs  spawn_support.rs
crates/aionui-team/src/team_run/: manager.rs  mod.rs  tests.rs
crates/aionui-team/src/work_coordinator/: coordinator.rs  model.rs  tests.rs
crates/aionui-team/tests/: e2e_team_flow.rs  mcp_server_integration.rs  prompts_events_integration.rs  scheduler_integration.rs  session_service_integration.rs
crates/aionui-team/tests/common/: mod.rs
docs/teams/: frontend-guide.md  (+1 more)
scripts/: check-glibc-baseline.test.sh
(+243 files in other folders)
