[package]
name = "aionui-auth"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
tower.workspace = true
tower-http.workspace = true
dashmap.workspace = true
axum.workspace = true
serde.workspace = true
