[package]
name = "aionui-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-system.workspace = true
aionui-ai-agent.workspace = true
aionui-file.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
