[package]
name = "aionui-extension"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
semver.workspace = true
notify.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
